添加了CSS样式

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>webpack配置</title>
 </head>
 <body>
-<h1>webpack 打包软件的配置</h1>
+<h1>webpack 打包软件的配置--针对JS</h1>
 <div id="app1">
     <ul>
         <li><span>首先work_spac做好开发文件的准备</span></li>
